Using modelsim and removed all glitches.

--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@
 #########
 *
 !*/
-#!.gitignore
+!.gitignore
 ###########################################################################
 ##	VIVADO/ISE
 ###########################################################################
@@ -19,6 +19,8 @@
 !*.bd
 !*.edif
 !*.coe
+!*.ngc
+!*.mif
 !*.psm
 #########
 #IP files
@@ -44,7 +46,6 @@
 #Simulation logic analyzer
 #########
 !*.wcfg
-!*.coe
 #########
 #MIG
 #########
